# openapi-public-spec.json
@@ -2698,8 +2698,15 @@
           }
         },
         "responses": {
-          "200": {
-            "description": ""
+          "default": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrderDetailDto"
+                }
+              }
+            }
           }
         },
         "summary": "Create an order",
@@ -6903,7 +6910,7 @@
           },
           "order_url": {
             "type": "string",
-            "description": "The url to pay with stripe"
+            "description": "The url of order to pay or check the order status"
           }
         },
         "required": [
@@ -6937,7 +6944,7 @@
           },
           "related_reward_id": {
             "type": "number",
-            "description": "The related reward pool id of the order"
+            "description": "The related reward pool id of the order, note: this field may be require if we finish our economic model"
           },
           "redirect_url": {
             "type": "string",
